# checkers-python

./: .pre-commit-config.yml  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
src/: build.py  main.py
src/app/: app.py  config.py
src/checkers/: __init__.py  board.py  checker.py  constants.py  enums.py  filed.py  game.py  move.py  point.py  position.py  side.py
