[tool.poetry]
name = "checkers-python"
version = "0.2.0"
description = "Checkers game written in Python"
authors = ["FranChesKo"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pillow = "^10.4.0"
pyinstaller = "^6.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^4.0.0"

[tool.black]
line-length = 90
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src", "tests"]
extend_skip = ["__init__.py"]

[tool.flake8]
max-line-length = 90
count = true

[tool.mypy]
mypy_path = "src"
packages = "tests"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
